--- a/MasterMind/Views/Usuario/partialPerfil.cshtml
+++ b/MasterMind/Views/Usuario/partialPerfil.cshtml
@@ -20,7 +20,7 @@
 
     <br />
 
-    <div class="display-label">
+   <div class="display-label">
         @Html.DisplayNameFor(model => model.Email)
     </div>
     <div class="display-field">
@@ -28,17 +28,17 @@
     </div>
 
     <div class="display-label">
-        @Html.DisplayNameFor(model => model.Dt_nasc)
+       @Html.DisplayNameFor(model => model.Dt_nasc)
     </div>
     <div class="display-field">
-        @Html.DisplayFor(model => model.Dt_nasc)
+        <p> @Html.DisplayFor(model => model.Dt_nasc)</p>
     </div>
 
     <div class="display-label">
         @Html.DisplayNameFor(model => model.Pais)
     </div>
     <div class="display-field">
-        @Html.DisplayFor(model => model.Pais)
+        <p>@Html.DisplayFor(model => model.Pais) </p>
     </div>
 
 
@@ -46,6 +46,6 @@
         @Html.DisplayNameFor(model => model.Estado)
     </div>
     <div class="display-field">
-        @Html.DisplayFor(model => model.Estado)
+       <p> @Html.DisplayFor(model => model.Estado) </p>
     </div>
 </div>
