--- a/MasterMind/Styles/icons.css
+++ b/MasterMind/Styles/icons.css
@@ -19,10 +19,10 @@
 	font-size: 40px;
 	line-height: 40px;
 	width: 50px;
-	top: 50%;
+	top: 20%;
 	left: 15px;
 	margin-top: -20px;
-	text-align: center;
+	text-align: left;
 }
 .icon-monkey:before {
 	content: "\38";
